# mla-gpt

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: gpt2_124m_base.yaml  recall_base.yaml  recall_copy.yaml  recall_selcopy.yaml  tinystories_base.yaml
docs/: attention-variants.html  index.html  recall-capability.html
scripts/: benchmark.py  eval.py  eval_fineweb_pace.sbatch  eval_recall.py  make_arch_figures.py  prep_fineweb_pace.sbatch  prepare_fineweb.py  prepare_tinystories.py  recall_cap120k.sh  recall_cap_compare.py  recall_lrctrl.sh  recall_lrctrl_compare.py  sweep_fineweb.sh  sweep_fineweb_pace.sbatch  sweep_recall.sh  sweep_tinystories.sh  train.py
src/mla_gpt/: __init__.py  attention.py  benchmark.py  config.py  data.py  eval.py  layers.py  model.py  recall_eval.py  rope.py  synthetic.py  training.py
tests/: test_model.py  test_synthetic.py
