[project]
name = "mla-gpt"
version = "0.1.0"
description = "Multi-head Latent Attention vs MHA/MQA/GQA: a controlled study on a 124M GPT"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.5",
    "numpy>=1.26",
    "tiktoken>=0.7",
    "datasets>=2.20",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mla_gpt"]
